feat(cloud): production deployment to Cloud Run, Firebase Hosting & automated backup plan
- Deploy Micronaut backend on Google Cloud Run with Java 25 runtime and --no-build
- Deploy React 19 frontend to Firebase Hosting on medj.web.app with Cloud Run /api/** rewrites
- Add Firebase Authentication (Google Sign-In) and backend JWT validation filter with email allowlist
- Integrate Cloud Firestore native persistence and Google Cloud Storage bucket (gs://medj-505807-assets)
- Implement Secret Manager integration for GEMINI_API_KEY
- Implement automated nightly backup plan (02:00 Europe/Paris via Cloud Scheduler & Cloud Run Job)
- Configure Cloud Firestore PITR (7 days), native backup schedule (14 days), and GCS object versioning
- Add backup-now.sh and restore-backup.sh disaster recovery scripts
- Update comprehensive README.md, AGENTS.md, and BACKUP_AND_RESTORE.md documentation